...
  }

  @override
  Widget build(BuildContext context) {
    return AdaptiveScaffold(
      appBar: AppBar(
        title: Text("Manage Address"),
      ),
      scaffoldBackgroundColor: ColorTheme.secondaryColor,
      child: Container(
        decoration: BoxDecoration(
          gradient: LinearGradient(
            colors: [
...
  });

  @override
  Widget build(BuildContext context) {
    final cubit = context.read<ManageAddressCubit>();
    return CustomTextFormField(
      textFormFieldKey: Key("new_address_field"),
      label: context.l10n.newAddress,
      hint: context.l10n.newAddress,
      controller: controller,
      onFieldSubmitted: (val) {
        if (val.trim().isNotEmpty) {
          cubit.registerAddress(val.trim());
...
