...
  "about": "About",
  "@about": {},
  "version": "Version",
  "@version": {},
  "tryAgain": "Try again",
  "@tryAgain": {},
  "registerUser": "Register User",
  "@registerUser": {},
  "lastName": "Last name",
  "@lastName": {},
  "dateBirth": "Date birth",
  "@dateBirth": {},
  "continueBtn": "Continue",
...
  "newAddress": "New address",
  "@newAddress": {},
  "addressListEmpty": "You do not have any addresses registered yet.",
  "@addressListEmpty": {},
  "address": "Address",
  "@address": {},
  "summary": "Summary",
  "@summary": {},
  "userInformation": "User information",
  "@userInformation": {},
  "fullName": "Full name",
  "@fullName": {},
  "registerUserHere": "Register user here",
...
